Fix z-index of darkening pseudo element.

--- a/src/stylesheets/components/_project.scss
+++ b/src/stylesheets/components/_project.scss
@@ -25,7 +25,8 @@
     bottom: 0;
     left: 0;
     background: $project-darken-color;
-    opacity: 0;
+    z-index: $zindex-draggable;
+    opacity: 1;
   }
 
   .project-mode-leave &,
